Improvements to Search and Diagnostics.
