# src/trapo-server/openapi/trapo.openapi.json
@@ -2981,6 +2981,7 @@
         "required": [
           "file_hash",
           "hit_count",
+          "relevance_score",
           "hits"
         ],
         "properties": {
@@ -2997,6 +2998,10 @@
             "items": {
               "$ref": "#/components/schemas/HybridSearchHit"
             }
+          },
+          "relevance_score": {
+            "type": "number",
+            "format": "double"
           }
         }
       },
@@ -3009,6 +3014,8 @@
           "category",
           "text",
           "score",
+          "relevance_score",
+          "rank",
           "hit_source"
         ],
         "properties": {
@@ -3037,6 +3044,15 @@
             "type": "integer",
             "format": "int32",
             "minimum": 0
+          },
+          "rank": {
+            "type": "integer",
+            "format": "int32",
+            "minimum": 0
+          },
+          "relevance_score": {
+            "type": "number",
+            "format": "double"
           },
           "score": {
             "type": "number",
@@ -3085,6 +3101,7 @@
         "type": "object",
         "required": [
           "query",
+          "hits",
           "files"
         ],
         "properties": {
@@ -3092,6 +3109,12 @@
             "type": "array",
             "items": {
               "$ref": "#/components/schemas/HybridSearchFileResult"
+            }
+          },
+          "hits": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/HybridSearchHit"
             }
           },
           "query": {
